<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutGeneral"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    android:orientation="vertical"
    tools:context=".vistas.DetallesPokemon">

    <!-- Indicador de carga -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="340dp"
        android:visibility="visible" />

    <!-- Contenido de la actividad -->

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nombrePokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="5"
                android:background="@drawable/borde_redondeado"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:text="@string/textView"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="italic"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/idPokemon"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="@drawable/pokeballabierta"
                android:fontFamily="@font/aldrich"
                android:gravity="center|center_horizontal"
                android:text="@string/textView"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSprites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/borde_redondeado"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/spritePokemon"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/normal"
                tools:ignore="ImageContrastCheck,ImageContrastCheck,ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/spriteShiny"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/shiny"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutNormalShiny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pokemonNormal"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:text="@string/normal"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pokemonShiny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:text="@string/shiny"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTipos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTipos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:text="@string/tipo"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tiposPokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:text="@string/textView"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutHabilidades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewHabilidades"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:text="@string/habilidades"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/habilidadesPokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="italic" />
        </LinearLayout>

        <TextView
            android:id="@+id/estadisticasPokemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/aldrich"
            android:gravity="center"
            android:text="@string/estadisticas"
            android:textColor="#1E1E1E"
            android:textSize="22sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:id="@+id/layoutAtaque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAtaque"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:gravity="center_horizontal"
                android:text="@string/ataque"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ataquePokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:text="@string/ejemplo"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewAtaqueEspecial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:gravity="center_horizontal"
                android:text="@string/ataqueEspecial"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ataqueEspecialPokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:text="@string/ejemplo"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDefensa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDefensa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:gravity="center_horizontal"
                android:text="@string/defensa"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/defensaPokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:text="@string/ejemplo"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewDefensaEspecial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:gravity="center_horizontal"
                android:text="@string/defensaEspecial"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/defensaEspecialPokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:text="@string/ejemplo"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSaludRapidez"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSalud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:gravity="center_horizontal"
                android:text="@string/salud"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/saludPokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:text="@string/ejemplo"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewVelocidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:gravity="center_horizontal"
                android:text="@string/velocidad"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/velocidadPokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:text="@string/ejemplo"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
